--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -54,7 +54,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="awqx.github.io/">aL Xin</a></p>
+        <p>This project is maintained by <a href="https://awqx.github.io/">aL Xin</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
