--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the site repo on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">View files on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
@@ -45,7 +45,7 @@
         {% for item in sorted %}
           {% if item.path != "index.md" and item.title and item.rank %}
             <!-- <li> -->
-              <a href="{{ item.path | replace:'.md','.html' }}">{{ item.title }}</a><br>
+              <a href="{{ "/" | absolute_url }}{{ item.path | replace:'.md','.html' }}">{{ item.title }}</a><br>
               <!-- <span> [ {{ item.path }} - {{ item.title }} - {{ item.rank }} ] </span> -->
             <!-- </li> -->
           {% endif %}
