--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,14 @@
 	<script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
+	<script>
+	  MathJax = {
+		tex: {
+		  inlineMath: [['$', '$']]
+		}
+	  };
+	</script>
+
 
 
 {% seo %}
@@ -18,7 +26,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="{{ "/" | absolute_url }}"><h1>{{ site.title | default: site.github.repository_name }}</h1></a>
+        <!-- <a href="{{ "/" | absolute_url }}"><h1>{{ site.title | default: site.github.repository_name }}</h1></a> -->
 
         {% if site.logo %}
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
